# chec-ai-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  routes.py
app/config/: dependencies.py
app/services/: agent_service.py  check_poster_service.py  google_check_service.py  ocr_service.py  scrapping_service.py  similarity_service.py
