[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.1",
    "groq>=1.1.1",
    "gunicorn>=25.1.0",
    "numpy==1.24.4",
    "paddleocr==2.7.3",
    "paddlepaddle==2.6.2",
    "pyspellchecker>=0.9.0",
    "pytesseract>=0.3.13",
    "sentence-transformers>=5.3.0",
    "setuptools>=82.0.1",
]
